<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>autonomy_bringup</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="43226681+Luke-kC@users.noreply.github.com">lukec</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>fake_drone_sim</exec_depend>
    <exec_depend>planner</exec_depend>
    <exec_depend>trajectory</exec_depend>
    <exec_depend>tracker</exec_depend>
    <exec_depend>safety_monitor</exec_depend>
    <exec_depend>command_gate</exec_depend>
    <exec_depend>mission_manager</exec_depend>
    <exec_depend>foxglove_bridge</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>ros2launch</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
